package model;

public enum Correspondance {
    SAME, PARTIAL_SAME, NEWER, OLDER, ORPHAN
}
