package model;

public enum Type {
    F, D
}
